# software_engineering_algo_tasks

./: .gitignore  .pre-commit-config.yaml  Author.md  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
tasks/data_structures/bracket_sequence/: solution.py
tasks/data_structures/double_connected_node/: solution.py
tasks/data_structures/stack_max/: solution.py  task.md
tasks/data_structures/tasks_list/: solution.py  task.md
tasks/data_structures/update_list/: solution.py  task.md
tasks/data_stuctures/bracket_sequence/: task.md
tasks/data_stuctures/double_connected_node/: task.md
tasks/recursion/binary_search/: solution.py  task.md
tasks/sorts/bubble_sort/: solution.py  task.md
tasks/sorts/insertion_sort/: solution.py  task.md
tasks/sorts/merge_sort/: solution.py  task.md
tasks/sorts/quick_sort/: solution.py  task.md
tests/: README.md
tests/data_structures/bracket_sequence/: bracket_sequence_test.py
tests/data_structures/double_connected_node/: double_connected_node_test.py
tests/data_structures/stack_max/: stack_max_test.py
tests/data_structures/tasks_list/: tasks_list_test.py
tests/data_structures/update_list/: update_list_test.py
tests/recursion/binary_search/: binary_search_test.py
tests/sorts/bubble_sort/: bubble_sort_test.py
tests/sorts/insertion_sort/: insertion_sort_test.py
tests/sorts/merge_sort/: merge_sort_test.py
tests/sorts/quick_sort/: quick_sort_test.py
