[project]
name = "software_engineering_algo_tasks"
version = "0.0.0"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pre-commit>=3.0",
  "ruff>=0.5",
  "black>=24.0",
  "isort>=5.12",
  "mypy>=1.6",
]

[tool.black]
line-length = 100
target-version = ["py312", "py311", "py310", "py39"]

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["tasks", "tests"]

[tool.ruff]
line-length = 100
extend-select = ["E", "F", "I", "B", "UP"]
ignore = ["E203", "W503"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
pretty = true