[tool.poetry]
name = "software_engineering_algo_tasks"
version = "0.0.0"
description = "software_engineering_algo_tasks"
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<=3.12"

[tool.poetry.dev-dependencies]
pytest = ">=7.0"
pre-commit = ">=3.0"
ruff = ">=0.5"
black = ">=24.0"
isort = ">=5.12"
mypy = ">=1.6"

[tool.black]
line-length = 100
target-version = ["py312", "py311", "py310", "py39"]

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["tasks", "tests"]

[tool.ruff]
line-length = 100
extend-select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
pretty = true
explicit_package_bases = true